--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript course content for COMP2041, Software Construction",
   "scripts": {
     "test": "npx mocha labs/**/test.js",
-    "lint": "npx eslint labs/**/*.js tutorials/**/*.js"
+    "lint": "npx eslint labs/**/*.js tutorials/**/*.js",
+    "start": "npx http-server"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^5.2.0",
+    "http-server": "^0.11.1",
     "mocha": "^5.2.0"
   }
 }
