changed the test process

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "JavaScript course content for COMP2041, Software Construction",
   "scripts": {
-    "test": "npx mocha labs/**/test.js",
+    "test:dom": "npx mocha tests/dom/**/*.js",
+    "test:async": "npx mocha tests/async/**/*.js",
+    "test:basic": "npx mocha tests/basics/**/*.js",
+    "test": "npm run test:basic && npm run test:async && npm run test:dom",
     "lint": "npx eslint labs/**/*.js tutorials/**/*.js",
     "start": "npx http-server"
   },
